--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        deno-version: [1.0.0]
+        deno-version: [1.0.0, 1.0.1, 1.0.2]
 
     steps:
       - uses: actions/checkout@v2
