fix: add wrk to github action vm

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,6 +15,8 @@ jobs:
         deno-version: [1.0.2]
 
     steps:
+      - name: Install wrk package
+        run: sudo apt-get update && sudo apt-get install wrk
       - uses: actions/checkout@v2
       - name: Use Deno ${{ matrix.deno-version }}
         uses: denolib/setup-deno@master
