--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - name: Install wrk package
-        run: sudo apt-get update && sudo apt-get install wrk
+        run: sudo apt-get install wrk
       - uses: actions/checkout@v2
       - name: Use Deno ${{ matrix.deno-version }}
         uses: denolib/setup-deno@master
