--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,11 +31,12 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
       - name: Run Benchmark Tests
-        run: echo "::set-output name=benchmark_results::$(make benchmark)\n"
+        run: echo "::set-output name=results::$(make benchmark)"
         id: run_benchmark_tests
       - name: Post Results To PR
         uses: unsplash/comment-on-pr@master
         with:
-          msg: ${{ steps.run_benchmark_tests.outputs.benchmark_results }}
+          msg: ${{join(steps.run_benchmark_tests.outputs.*, '\n')}}
+          check_for_duplicate_msg: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
