--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
       - name: Run Benchmark Tests
-        run: echo "::set-output name=results::$(make benchmark)"
+        run: echo "::set-output name=results::$(echo $(make benchmark))"
         id: run_benchmark_tests
       - name: Add Comment To PR
         env:
