--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -33,15 +33,10 @@ jobs:
       - name: Run Benchmark Tests
         run: echo "::set-output name=results::$(echo $(make benchmark))"
         id: run_benchmark_tests
-      - name: Add Comment To PR
+      - name: Post Results To PR
+        uses: unsplash/comment-on-pr@master
+        with:
+          msg: ${{ steps.run_benchmark_tests.outputs.results }}
+          check_for_duplicate_msg: false
         env:
-          BODY: ${{ steps.run_benchmark_tests.outputs.results }}
-          URL: ${{ github.event.issue.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl \
-            -X POST \
-            ${URL} \
-            -H "Content-Type: application/json" \
-            -H "Authorization: token ${GITHUB_TOKEN}" \
-            --data "{ \"body\": \"${BODY}\" }"
