--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
       - name: Run Benchmark Tests
-        run: echo "::set-output name=results::$(echo $(make benchmark))"
+        run: echo "::set-output name=results::$(echo \"Benchmark Results:\n\n$(make benchmark)\")"
         id: run_benchmark_tests
       - name: Post Results To PR
         uses: unsplash/comment-on-pr@master
