--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -31,7 +31,12 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
       - name: Run Benchmark Tests
-        run: echo "::set-output name=results::$(echo "Benchmark Results:\n$(make benchmark)")"
+        run: |
+          results=$(echo "Benchmark Results:\n$(make benchmark)")
+          results="${results//'%'/'%25'}"
+          results="${results//$'\n'/'%0A'}"
+          results="${results//$'\r'/'%0D'}" 
+          echo "::set-output name=results::$results"
         id: run_benchmark_tests
       - name: Post Results To PR
         uses: mshick/add-pr-comment@v1
