--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -32,11 +32,10 @@ jobs:
           deno-version: ${{ matrix.deno-version }}
       - name: Run Benchmark Tests
         run: |
-          results=$(echo "**Benchmark Results**:%0A$(make benchmark)")
+          results=$(echo "**Benchmark Results**:"\\n"$(make benchmark)")
           results="${results//'%'/'%25'}"
           results="${results//$'\n'/'%0A'}"
-          results="${results//$'\r'/'%0D'}" 
-          results="${results//$'\t'/'%09'}" 
+          results="${results//$'\r'/'%0D'}"
           echo "::set-output name=results::$results"
         id: run_benchmark_tests
       - name: Post Results To PR
