--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        deno-version: [1.0.0, 1.0.2, 1.0.3]
+        deno-version: [1.0.5, 1.1.0]
 
     steps:
       - name: Install wrk package
