feat: add force to publish docs workflow

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -27,5 +27,6 @@ jobs:
         with:
           message: "publish typedocs"
           add: "docs"
+          force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
