--- a/.github/workflows/pr_benchmark_updater.yml
+++ b/.github/workflows/pr_benchmark_updater.yml
@@ -15,7 +15,7 @@ jobs:
       - name: main
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          WORKFLOW_NAME: "Benchmark"
+          WORKFLOW_NAME: "Run benchmark"
           # the name of the artifact whose content comment published by PR. Must have a single markdown file inside.
           MSG_ARTIFACT_NAME: "pr_message"
           # How far back to look for finished runs, in minutes.
