--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -29,10 +29,11 @@ jobs:
           # Benchmark results
 
           <details>
-          <summary>PR to merge $GITHUB_HEAD_REF $GITHUB_SHA -> $GITHUB_BASE_REF</summary>
+          <summary>PR to merge \`$GITHUB_HEAD_REF\` $GITHUB_SHA -> \`$GITHUB_BASE_REF\`</summary>
+
+          \`\`\`$(make benchmark)
           \`\`\`
-          $(make benchmark)
-          \`\`\`
+
           </details>
           EOF
       - name: Save PR message as artifact
