--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "deno.enable": true,
+  "deno.unstable": true,
   "[typescript]": {
     "editor.defaultFormatter": "axetroy.vscode-deno"
   },
