--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,5 +1,1 @@
-future: true
-encoding: "UTF-8"
-include:
-  - "_*_.html"
-  - "_*_.*.html"
+future: true\nencoding: "UTF-8"\ninclude:\n  - "_*_.html"\n  - "_*_.*.html"
