fix: update type definition, docs, router.param
fix: update type definition for app.param and router.param
fix: updated router.param and removed deprecated code
fix: updated docs

--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,1 +1,5 @@
-future: true\nencoding: "UTF-8"\ninclude:\n  - "_*_.html"\n  - "_*_.*.html"
+future: true
+encoding: "UTF-8"
+include:
+  - "_*_.html"
+  - "_*_.*.html"
