--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -19,9 +19,9 @@ jobs:
           sudo cp wrk /usr/local/bin
       - uses: actions/checkout@v2
       - name: Use Deno ${{ matrix.deno-version }}
-        uses: denolib/setup-deno@master
+        uses: denolib/setup-deno@v2
         with:
-          deno-version: 1.1.3
+          deno-version: 1.2.2
       - name: Run Benchmark Tests
         run: |
           mkdir -p artifacts          
