--- a/.github/workflows/publish-egg.yml
+++ b/.github/workflows/publish-egg.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: denolib/setup-deno@master
+      - uses: denolib/setup-deno@v2
         with:
-          deno-version: 1.1.3
-      - run: deno install -A -f --unstable -n eggs https://x.nest.land/eggs@0.1.8/mod.ts
+          deno-version: 1.2.2
+      - run: deno install -A -f --unstable -n eggs https://x.nest.land/eggs@0.2.1/mod.ts
       - run: |
           export PATH="/home/runner/.deno/bin:$PATH"
           eggs link --key ${NEST_LAND_KEY}
