--- a/.github/workflows/publish-egg.yml
+++ b/.github/workflows/publish-egg.yml
@@ -15,7 +15,7 @@ jobs:
       - run: deno install -A -f --unstable -n eggs https://x.nest.land/eggs@0.2.1/mod.ts
       - run: |
           export PATH="/home/runner/.deno/bin:$PATH"
-          eggs link --key ${NEST_LAND_KEY}
+          eggs link ${NEST_LAND_KEY}
           eggs publish
         env:
           NEST_LAND_KEY: ${{secrets.NEST_LAND_KEY}}
