--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,10 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  test:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         deno-version: [1.3.0]
 
     runs-on: ${{ matrix.os }}
@@ -21,3 +21,18 @@ jobs:
         with:
           deno-version: ${{ matrix.deno-version }}
       - run: make ci
+  test-win:
+    strategy:
+      matrix:
+        os: [windows-latest]
+        deno-version: [1.3.0]
+
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: denolib/setup-deno@v2
+        with:
+          deno-version: ${{ matrix.deno-version }}
+      - run: make build
+      - run: make test
