--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "deno.import_intellisense_origins": {
-    "https://deno.land": true
-  }
+  "editor.defaultFormatter": "denoland.vscode-deno"
 }
